chore: remove unnecessary configuration